format edits to bibliography

--- a/app/views/pages/biblio_temp.html.erb
+++ b/app/views/pages/biblio_temp.html.erb
@@ -52,36 +52,36 @@
 
 			<ol class="biblio">
 					<li class="biblio"><a class="biblio" class=href="http://vocabolario.signum.sns.it/" target="_blank">Accademia della Crusca</a>. <cite>Vocabolario della Crusca</cite>. 11 vols. Galileiana M. Cellini, 1863-19.</li>
-					<li class="biblio"><a class="biblio" href="http://www.arlima.net/" target="_blank"><b>ARLIMA</b></a> (Archives de littérature du moyen âge). Dir. Laurent Brun, Université d’Ottawa.</li>
-					<li class="biblio"><a class="biblio" href="http://artfl-project.uchicago.edu/" target="_blank"><b>ARTFL</b></a> (American and French Research on the Treasury of the French Language). Dir. Robert Morrissey). DEAF Baldinger, Kurt, et al.</li>
-					<li class="biblio"><cite>Dictionnaire étymologique de l’ancien français</cite>. Niemeyer, 1974-.<a class="biblio" href="http://www.deaf-page.de/index.htm" target="_blank"><b>DEAF</b></a></li>
+					<li class="biblio"><a class="biblio" href="http://www.arlima.net/" target="_blank"><b>ARLIMA</b></a> - (Archives de littérature du moyen âge). Dir. Laurent Brun, Université d’Ottawa.</li>
+					<li class="biblio"><a class="biblio" href="http://artfl-project.uchicago.edu/" target="_blank"><b>ARTFL</b></a> - (American and French Research on the Treasury of the French Language). Dir. Robert Morrissey). DEAF Baldinger, Kurt, et al.</li>
+					<li class="biblio"><a class="biblio" href="http://www.deaf-page.de/index.htm" target="_blank"><b>DEAF</b></a> - <cite>Dictionnaire étymologique de l’ancien français</cite>. Niemeyer, 1974-.</li>
 					<li class="biblio">Battaglia, Salvatore. <cite>Grande dizionario della lingua italiana</cite>. 21 vols. Gen. Ed., Giorgio Bárberi Squarotti. UTET, 1961-.</li>
-					<li class="biblio">Battisti, Carlo, and G. Alessio. <cite>Dizionario etimologico italiano</cite>. G. Barbera, 1950-57.<b>DEI</b></li>
-					<li class="biblio">Beltrami, Pietro G., dir. <cite>Tesoro della Lingua Italiana delle Origini</cite> (part of <a class="biblio" href="http://artfl-project.uchicago.edu/content/ovi-search-form" target="_blank">ARTFL</a> databases).<a class="biblio" href="http://tlio.ovi.cnr.it/TLIO/" target="_blank"><b>TLIO</b></a></li>
+					<li class="biblio"><b>DEI</b> - Battisti, Carlo, and G. Alessio. <cite>Dizionario etimologico italiano</cite>. G. Barbera, 1950-57.</li>
+					<li class="biblio"><a class="biblio" href="http://tlio.ovi.cnr.it/TLIO/" target="_blank"><b>TLIO</b></a> - Beltrami, Pietro G., dir. <cite>Tesoro della Lingua Italiana delle Origini</cite> (part of <a class="biblio" href="http://artfl-project.uchicago.edu/content/ovi-search-form" target="_blank">ARTFL</a> databases).</li>
 					<li class="biblio">Bloch, O., and W. von Wartburg. <cite>Dictionnaire étymologique de la langue française</cite>. 2 vols. PUF, 1932.</li>
 					<li class="biblio">Bourgain, Pascale, and Françoise Vieillard. <a class="biblio" href="https://books.google.com/books?id=ZytdnyZcRqEC&lpg=PA1&dq=conseils%20pour%20l'%C3%A9dition%20fascicule%20III&pg=PA1#v=onepage&q=conseils%20pour%20l'%C3%A9dition%20fascicule%20III&f=false" target="_blank"><cite>Conseils pour l’édition des textes médiévaux</cite></a>. Fascicule III: Textes littéraires. Éd. du CTHS, École des chartes, 2002.</li>
 					<li class="biblio">Brambilla Ageno, Franca. <cite>L'Edizione critica dei testi volgari</cite>. Antenore, 1975.</li>
-					<li class="biblio">Cortelazzo, Manlio, and Paolo Zolli. <cite>Dizionario etimologico della lingua italiana</cite>. Zanichelli, 1979-85.<b>DELI</b> </li>
+					<li class="biblio"><b>DELI</b> - Cortelazzo, Manlio, and Paolo Zolli. <cite>Dizionario etimologico della lingua italiana</cite>. Zanichelli, 1979-85.</li>
 					<li class="biblio">Desole, Corinna. <cite>Repertorio ragionato dei personaggi citati nei principali cantari cavallerschi italiani</cite>. Edizioni dell’Orso, 1995.</li>
 					<li class="biblio">DuCange, Domino, et. al. <cite>Glossarium mediæ et infimæ latinitatis</cite>. L. Favre, 1883-1887.</li>
-					<li class="biblio"><b>FIOLA</b></a> (Franco-Italian on-line Archive). Dir. Leslie Zarker Morgan and David P. Bénéteau.<a class="biblio" href="http://loyolanotredamelib.org/fiola/" target="_blank"></li>
+					<li class="biblio"><a class="biblio" href="https://www3.nd.edu/~italnet/fiola/" target="_blank"><b>FIOLA</b></a> - (Franco-Italian on-line Archive). Dir. Leslie Zarker Morgan and David P. Bénéteau.</li>
 					<li class="biblio">Flutre, Ferdinand. <cite>Table des noms propres avec toutes leur variantes, figurant dans les romans du moyen âge écrits en français ou en provençal et actuellement publiés ou analysés</cite>. Champion, 1966.</li>
 					<li class="biblio">Foulet, Alfred, and Mary Blakely Speer. <cite>On Editing Old French Texts</cite>. Regents Press of Kansas, 1979.</li>
 					<li class="biblio">Godefroy, Frédéric. <a class="biblio" href="http://gallica.bnf.fr/ark:/12148/bpt6k50634z" target="_blank"><cite>Dictionnaire de l’ancienne langue française et de toutes ses dialectes, du IXe au XVe s</cite></a>. 10 vols. F. Vieweg, 1880-1902. Rep. Kraus.</li>
 					<li class="biblio">Greimas, Algirdas Julien. <a class="biblio" href="http://ducange.enc.sorbonne.fr/" target="_blank"><cite>Dictionnaire de l’ancien français</cite></a>. Larousse, 1992. (multiple editions).</li>
 					<li class="biblio">Hindley, Alan, Frederick W. Langley, and Brian J. Levy. <cite>Old French-English Dictionary</cite>. Cambridge UP, 2006.</li>
 					<li class="biblio">Lepage, Yvan G. <cite>Guide de l’édition de textes en ancien français</cite>. Champion, 2001.</li>
-					<li class="biblio">Meyer-Lübke, Wilhelm. <cite>Romanisches etymologisches Wörterbuch</cite>. Winter, 1911 (and other editions).<a class="biblio" href="http://archive.org/details/romanischesetymo00meyeuoft" target="_blank"><b>REW</b></a></li>
+					<li class="biblio"><a class="biblio" href="http://archive.org/details/romanischesetymo00meyeuoft" target="_blank"><b>REW</b></a> - Meyer-Lübke, Wilhelm. <cite>Romanisches etymologisches Wörterbuch</cite>. Winter, 1911 (and other editions).</li>
 					<li class="biblio">Modern Language Association of America. <a class="biblio" href="https://www.mla.org/Resources/Research/Surveys-Reports-and-Other-Documents/Publishing-and-Scholarship/Reports-from-the-MLA-Committee-on-Scholarly-Editions/Guidelines-for-Editors-of-Scholarly-Editions" target="_blank"><cite>Guidelines for Editors of Scholarly Editions</cite></a>. Revised 29 June 2011.</li>
 					<li class="biblio">Moisan, André. <cite>Répertoire des noms propres de personnes et de lieux cités dans les chansons de geste françaises et les œuvres étrangères dérivées</cite>. 5 vols. Massot, 1986.</li>
-					<li class="biblio">Pfister, Max, et al. <cite>Lessico etimologico italiano</cite>. Reichert, 1984-.<a class="biblio" href="https://reichert-verlag.de/en/series/linguistics_series/sprachwissenschaft_lessico_etimologico_italiano" target="_blank"><b>LEI</b></a></li>
+					<li class="biblio"><a class="biblio" href="https://reichert-verlag.de/en/series/linguistics_series/sprachwissenschaft_lessico_etimologico_italiano" target="_blank"><b>LEI</b></a> - Pfister, Max, et al. <cite>Lessico etimologico italiano</cite>. Reichert, 1984-.</li>
 					<li class="biblio">Pope, Mildred K. <cite>From Latin to Modern French with Especial Consideration of Anglo-Norman</cite>. Phonology and Morphology. Manchester UP, 1934.</li>
-					<li class="biblio"><cite>Repertorio informatizzato antica letteratura franco-italiana</cite>). Dir. Francesca Gambino, Università di Padova.<a class="biblio" href="http://www.rialfri.eu/rialfriWP/" target="_blank"><b>RIALFrI</b></a></li>
+					<li class="biblio"><a class="biblio" href="http://www.rialfri.eu/rialfriWP/" target="_blank"><b>RIALFrI</b></a> - <cite>Repertorio informatizzato antica letteratura franco-italiana</cite>). Dir. Francesca Gambino, Università di Padova.</li>
 					<li class="biblio">Rohlfs, Gerhard. <cite>Grammatica storica della lingua italiana e dei suoi dialetti</cite>. 3 vols. Einaudi, 1966.</li>
-					<li class="biblio">Tobler, Adolf. <a class="biblio" href="http://www.uni-stuttgart.de/lingrom/stein/tl/bezug.htm" target="_blank"><cite>Altfranzösisches Wörterbuch</cite>. Wiesbaden: Franz Steiner, 1969. Electronic version includes eds. Peter Blumenthal and Achim Stein. 2002.</li>
-					<li class="biblio">Tobler, Adolf, and Lommatzsch, E. Französisches etymologisches Wörterbuch. Franz Steiner, 1954- 63.<a class="biblio" href="http://www.uni-stuttgart.de/lingrom/stein/tl/work/workfr.htm." target="_blank"><b>TL</b></a></li>
+					<li class="biblio"><a class="biblio" href="http://www.uni-stuttgart.de/lingrom/stein/tl/bezug.htm" target="_blank"><b>TL</b></a> - Tobler, Adolf. <cite>Altfranzösisches Wörterbuch</cite>. Wiesbaden: Franz Steiner, 1969. Electronic version includes eds. Peter Blumenthal and Achim Stein. 2002.</li>
+					<li class="biblio"><a class="biblio" href="http://www.uni-stuttgart.de/lingrom/stein/tl/bezug.htm" target="_blank"><b>TL</b></a> - Tobler, Adolf, and Lommatzsch, E. Französisches etymologisches Wörterbuch. Franz Steiner, 1954- 63.</li>
 					<li class="biblio">Vieillard, Françoise, and Olivier Guyotjeannin, eds. <a class="biblio" href="https://books.google.com/books?id=T3JbuyCJKvcC&lpg=PP1&pg=PP1#v=onepage&q&f=false" target="_blank"><cite>Conseils pour l’édition des textes médiévaux</cite></a>. I. Fascicule I: conseils généraux. Paris: Éd. du CTHS: École des chartes, 2001.</li>
-					<li class="biblio">Wartburg, Walther von. <cite>Französisches etymologisches Wörterbuch</cite>. 25 vols. + Supp. F. Klopp, 1921-.<a class="biblio" href="https://apps.atilf.fr/lecteurFEW/"><b>FEW</b></a></li>
+					<li class="biblio"><a class="biblio" href="https://apps.atilf.fr/lecteurFEW/"><b>FEW</b></a> - Wartburg, Walther von. <cite>Französisches etymologisches Wörterbuch</cite>. 25 vols. + Supp. F. Klopp, 1921-.</li>
 					<li class="biblio">Zaccarello, Michelangelo. <cite>L'edizione critica del testo letterario. Primo corso di filologia italiana</cite>. Le Monnier, 2017.</li>
 			</ol>
 
@@ -108,7 +108,8 @@
 					<li class="biblio">Dante Alighieri. <cite>Commedia</cite>. Ed. Robert M. Durling and Ronald L. Martinez. 3 vols. Oxford U P, 1996- 2003-2011.</li>
 					<li class="biblio">Dante Alighieri. <cite>Monarchia</cite>. Eng: On World Government. Trans. Herbert W. Schneider. Macmillan/Library of Liberal Arts, 1957.</li>
 					<li class="biblio">Debenedetti, Santorre. "Intorno al testo del frammento Barbieri dell'Ugone d'Alvernia." <cite>Archivum Romanicum</cite> 14 (1930): 269-73.</li>
-					<li class="biblio">Gardner, Eileen. <cite>Medieval Visions of Heaven and Hell</cite>. A Sourcebook. Garland, 1993.</li>
+          <li class="biblio">Di Stefano, Giuseppe. <cite>Nouveau dictionnaire historique des locutions</cite>. Ancien Français, Moyen Français, Renaissance. 2 vols. Brepols, 2015.</li>
+          <li class="biblio">Gardner, Eileen. <cite>Medieval Visions of Heaven and Hell</cite>. A Sourcebook. Garland, 1993.</li>
 					<li class="biblio">Giacon, Carla. "La redazione padovana dell'<cite>Huon d'Auvergne</cite>: Studio, Edizione, Glossario." Diss. Università degli studi, Padova. 1960-61.</li>
 					<li class="biblio">Everson, Jane E. <cite>The Italian Romance Epic in the Age of Humanism. The Matter of Italy and the World of Rome.</cite> Oxford: U P, 2001.</li>
 					<li class="biblio">Graf, A. “Di un poema inedito di Carlo Martello e di Ugo conte d'Alvernia.” Giornale di Filologia Romanza 1 (1878): 92-110.</li>
@@ -162,17 +163,10 @@
 					<li class="biblio">Scattolini, Michela G. "Ricerche sulla tradizione dell’Huon d’Auvergne." Diss. Siena Scuola di dottorato europea in filologia romanza, 2010.</li>
 					<li class="biblio">Schwam-Baird, Shira. "La Résistance d'Ynide dans l'épopée franco-italienne Huon d'Auvergne : femme exceptionnelle / femme admirable?" «Par deviers Rome m’en renvenrai errant»: <cite>Atti del XXème Congrès International de la Société Rencesvals pour l'étude des épopées romanes</cite>. Eds. Maria Careri, Caterina Menichetti et Maria Teresa Rachetta.Viella, 2017. 637-646.</li>
 					<li class="biblio">Schwam-Baird, Shira. "La longue vie de Valentin et Orson." <cite>Pour un nouveau répertoire des 'mises en prose' roman, chanson de geste, autres genres</cite>. Eds. Maria Colombo Timelli, Barbara Ferrari et Anne Schoysman. Classiques Garnier, 2014. 297-306.</li>
-					<li class="biblio">Schwam-Baird, Shira. "Translation in the Late Fifteenth Century: Octovien de Saint-Gelais's L'ystoire de Eurialus et Lucresse." <cite>Medieval Perspectives</cite> 26 (2011 [2012]), 77-88.</li>
 					<li class="biblio">Schwam-Baird, Shira, ed. <cite>Valentin et Orson: An Edition and Translation of the Fifteenth-Century Romance Epic</cite>. ACMRS (Arizona Center for Medieval and Renaissance Studies), 2011. 543 pp.</li>
-					<li class="biblio">Schwam-Baird, Shira. "The Letters of Lucretia and Euryalus in Text and Image: An Illuminated Manuscript of Aeneas Silvius Piccolomini's Story of Two Lovers." <cite>Medieval Perspectives</cite> 22 (2007 [2011]), 126-144.</li>
 					<li class="biblio">Schwam-Baird, Shira. "The Romance Epic Hero, the Mercenary, and the Ottoman Turk Seen through the Lens of Valentin et Orson (1489)." <cite>Medievalia et Humanistica</cite> 34 (2008), 105-127.</li>
 					<li class="biblio">Schwam-Baird, Shira. "A Husband to Her Liking: The Wily Saracen Queen Rozemonde in the 1489 Valentin et Orson." <cite>Olifant</cite> 26.1 (2007), 45-66.</li>
 					<li class="biblio">Schwam-Baird, Shira. "Terror and Laughter in the Images of the Wild Man: The Case of the 1489 Valentin et Orson." <cite>Fifteenth Century Studies</cite> 27 (2002), 238-256.</li>
-					<li class="biblio">Schwam-Baird, Shira. "King Arthur in Hollywood: The Subversion of Tragedy in First Knight." <cite>Medieval Perspectives</cite> 14 (1999), 202-213.</li>
-					<li class="biblio">Schwam-Baird, Shira. "Would a Courtly Gentleman Belt a Lady? Chastity Belts (and Knots) in Marie de France's Guigemar." <cite>Mediaevalia</cite> 22.2 (1999), 323-342.</li>
-					<li class="biblio">Schwam-Baird, Shira. "The Crucified Heart of René d'Anjou in Text and Image." <cite>Fifteenth Century Studies</cite> 25 (2000), 228-252.</li>
-					<li class="biblio">Schwam-Baird, Shira. "Sweet Dreams: The Pursuit of Youthful Love in Jean Froissart's Joli Buisson de Jonece and René d'Anjou's Livre du Cuer d'Amours Espris." <cite>Le Moyen Français</cite> 38 (1996), 45-60.</li>
-					<li class="biblio">Schwam-Baird, Shira, ed. <cite>Adam de la Halle: Le Jeu de Robin et Marion.</cite> Garland Publishing Inc., 1994. 153 pp.</li>
 					<li class="biblio">Stengel, Edmund. "Eine weitere Textstelle aus der franco-venezianischen Chanson de geste von Huon d'Auvergne. (Nach der Berliner und der Turiner Handschrift)." <cite>Festschrift zum 13. Neuphilologentage</cite>. C. Meyer, 1908. 35-49.</li>
 					<li class="biblio">Stengel, Edmund. "Huons von Auvergne Keuschheitsprobe, Episode aus der franco-venezianischen Chanson de geste von Huon d'Auvergne nach den drei erhaltenen Fassungen, der Berliner, Turiner und Paduaner." <cite>Mélanges... Wilmotte</cite>. Champion, 1910. 2: 685-713.</li>
 					<li class="biblio">Stengel, Edmund. "Karl Martels Entführung in die Hölle und Wilhem Capets Wahl zu seinem Nachfolger. Stelle aus der Chanson von Huon d'Auvergne (1) nach der Berliner Hs." <cite>Studi letterari e linguistici dedicati a Pio Rajna nel quarantesimo anno del suo insegnamento</cite>. Hoepli, 1911. 873- 91.</li>
