LZM & SSB updates; bibliography updates; added encoding guidelines page

--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -543,6 +543,15 @@ p.indent {
 
 /* Praxis Pages */
 
+/* Praxis Pages Accordion Structure */
+
+
+
+
+
+
+/* Praxis Pages Formatting */
+
 div.abbr-examples {
 	margin-left: 20%;
 }
