--- a/app/views/pages/versioning.html.erb
+++ b/app/views/pages/versioning.html.erb
@@ -22,7 +22,7 @@
 
     <dl>
       <dt>Version 1.0 of Huon d'Auvergne Editions and Translation</dt>
-        <p>In their current form, the editions and the translation of Huon d'Auvergne are neither complete nor authoritative. Although the texts are available to the public, the editorial team is currently extensively revising them for accuracy and clarity. The definitive texts will be released with Version 2.0.</p>
+        <p>In their current form, the editions and the translation of Huon d'Auvergne are neither complete nor authoritative. Although the texts are available to the public, the editorial team is currently extensively revising them for accuracy and clarity. The definitive texts will be released with Version 2.0. In its current form, the Huon Digital Archive is not supported on mobile devices.</p>
     </dl>
 
 
