--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -31,7 +31,7 @@
             <!-- <a class="nav" href="#"><%= link_to 'T Criteria', t_praxis_path() %></a> -->
             <a class="nav" href="#"><%= link_to 'P Criteria', p_praxis_path() %></a>
             <!-- <a class="nav" href="#"><%= link_to 'Br Criteria', br_praxis_path() %></a> -->
-            <a class="nav" href="#"><%= link_to 'Encoding Guidelines', encod_praxis_path() %></a>
+            <!-- <a class="nav" href="#"><%= link_to 'Encoding Guidelines', encod_praxis_path() %></a> -->
           </div>
         </li>
 
