--- a/app/views/layouts/_reading_interface.html.erb
+++ b/app/views/layouts/_reading_interface.html.erb
@@ -47,7 +47,7 @@
                   </form>
                 <% end %>
 
-<!-- Scrival View Button -->
+<!-- Scribal View Button -->
 
                 <form id="diplo-form">
                 |
@@ -111,13 +111,13 @@
                       </div>
                   </div>
           </div>
-            <div id="reader-center-div">
-                    <div id="TEI_reader">
-                        <div id="tei_wrapper">
-                            <%= parse_line_groups(@line_groups)%>
-                        </div>
-                </div>
-            </div>
+          <div id="reader-center-div">
+                  <div id="TEI_reader">
+                      <div id="tei_wrapper">
+                          <%= parse_line_groups(@line_groups)%>
+                      </div>
+                  </div>
+          </div>
 
 
 <!-- Date Stamp -->
