mirador-custom.js

--- a/app/assets/stylesheets/mirador-custom.css
+++ b/app/assets/stylesheets/mirador-custom.css
@@ -1,5 +1,5 @@
 .mirador-container .mirador-main-menu-bar {
-   background-color: red;
+   background-color: black;
    border-bottom: 1px solid #555;
    color: #fff;
    height: 33px;
