--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,4 +1,4 @@
-<div class="site-nav-bar">
+<div>
 
       <ul class="nav">
 
@@ -42,7 +42,9 @@
             <a class="nav" href="#"><%= link_to 'Cite our work', cite_path() %>
           </div>
         </li>
-
+      
       </ul>
 
 </div>
+
+
