--- a/app/views/pages/cite.erb
+++ b/app/views/pages/cite.erb
@@ -15,11 +15,11 @@
   <h1 class="praxis">How to cite our work</h1>
     <p>When citing our work, we ask that you include the version number and, when referencing a specific segment of the site, indicate the editor or translator associated with the cited text.</p>
 
-  <h2 class="praxis">Citing the entire site</h2>
+  <h2 class="praxis">Citing the entire site:</h2>
 
     <p class="indent">The Huon d’Auvergne Digital Archive. Edited by Leslie Zarker Morgan &amp; Stephen P. McCormick. Translated by Shira Schwam Baird. Washington &amp; Lee U, 31 Aug. 2017, www.huondauvergne.org, version 1.0.0. Accessed 23 Apr. 2018.</p>
 
-  <h2 class="praxis">Citing editions and translation individually</h2>
+  <h2 class="praxis">Citing editions and translation individually:</h2>
 
     <p class="indent">McCormick, Stephen P., ed. Digital Edition of Huon d’Auvergne According to the Barbieri Fragment, Bologna, Biblioteca dell’Archiginnasio B. 3489. Washington &amp; Lee U, 31 Aug. 2017, www.huondauvergne.org/br, version 1.0.0. Accessed 23 Apr. 2018.</p>
 
@@ -35,7 +35,7 @@
 
   <dl>
     <dt>We would like to thank for their support:</dt>
-      <dd>The National Endowment for the Humanities (Award RQ-50735-13), 2014-2017</dd>
+      <dd>National Endowment for the Humanities (Award RQ-50735-13), 2013-2017</dd>
     <dt>And for their collaboration:</dt>
       <dd>Biblioteca dell'Archiginnasio, Bologna</dd>
       <dd>Kupferstichkabinett, Berlin</dd>
@@ -47,5 +47,7 @@
 
 </div>
 </body>
+
+<%= render 'layouts/footer' %>
 
 </html>
