--- a/app/views/pages/p_praxis.html.erb
+++ b/app/views/pages/p_praxis.html.erb
@@ -170,7 +170,7 @@
 
         <h2 class="praxis">&#10081; 4. Diacritical Signs</h2>
 
-        <p>Following the praxis established by Holtus in his edition of <em>Aliscans</em>, I use the accute (<em>é</em>), grave (<em>è</em>), and umlaut (<em>ë</em>) accents to aid the reader in differentiating verb tense and homophones. The cedilla (<em>ç</em>) is a characteristic grapheme in Franco-Italian texts, and it is the only diacritical mark the scribe employs. For each example below, I provide the first occurence in the manuscript, noting other occurences of particular linguistic interest.</p>
+        <p>Following the praxis established by Holtus in his edition of <em>Aliscans</em>, I use the accute (<em>é</em>), grave (<em>è</em>), and umlaut (<em>ë</em>) accents to aid the reader in differentiating verb tense and homophones. The cedilla (<em>ç</em>) is a characteristic grapheme in Franco-Italian texts, and it is the only diacritical mark the scribe employs. For each example below, I provide the first occurance in the manuscript, noting other occurances of particular linguistic interest.</p>
 
 <!-- Include reference to ç in Franco-Italian texts -->
 
