--- a/app/views/layouts/_praxis_interface.html.erb
+++ b/app/views/layouts/_praxis_interface.html.erb
@@ -62,11 +62,11 @@
 
 </html>
 
-<script type="text/javascript">
 
-var m = "This page was last updated: " + document.lastModified;
-var p = m.length-8;
 
-document.body.appendChild(document.createElement("center")).innerText = "Version 1.0. Last modified: " + document.lastModified
 
-</script>
+
+
+
+
+<%= render 'layouts/footer' %>
