--- a/app/views/pages/encod_praxis.html.erb
+++ b/app/views/pages/encod_praxis.html.erb
@@ -1,3 +1,18 @@
-<!--
-<%= mirador_tag(id:'viewer', width: '500px', height: '500px') %>
--->
+<header class="row">
+
+  <div class="large-12 columns text-center">
+   <h1 id="main-title">Encoding Guidelines for the Huon d'Auvergne Digital Editions</h1>
+  </div>
+
+</header>
+
+ <section class="row">
+  <div class="large-8 large-offset-2 columns">
+
+    <p>Insert Encoding Guidelines here.</p>
+
+   <hr>
+
+  </div>
+</section>
+<%= render 'layouts/footer' %>
