--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,8 +2,18 @@
 <!DOCTYPE html>
 <html>
 
-<body>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-112427356-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-112427356-1');
+</script>
+
+
+<body>
 
 <div class="container">
 
@@ -29,7 +39,7 @@
             <%= link_to 'Turin (T)', t_manuscript_path() %> |
             <%= link_to 'Padua (P)', p_manuscript_path() %> |
             <%= link_to 'Barbieri Fragment (Br)', br_manuscript_path() %> |
-            <%= link_to 'Berlin Translation', b_translation_path() %> |
+            <%= link_to 'Berlin Translation', b_translation_path() %>
             <!-- <%= link_to 'Hell Scene Comparison', hell_scene_path() %> -->
           </div>
   <hr>
@@ -75,7 +85,7 @@
                 <a href="http://library.wlu.edu/about/library-directory/jeff-barry">Jeff Barry</a> (Washington and Lee University)<br>
                 <a href="http://scholarslab.org/people/brandon-walsh/>Brandon Walsh">Brandon Walsh</a> (Scholars' Lab, University of Virginia)<br>
                 <a href="http://megankathleendoherty.com/">Megan Doherty</a> (Washington and Lee University)<br>
-                <a href="">Abdurrafey Khan</a> (Loyola University Chicago)
+                <a href="">Abdurrafey Khan</a>, project programmer (Loyola University Chicago)
               </div>
 
             <!-- <h5 id="sub-header">Washington and Lee Student Researchers</h4>
