--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -80,12 +80,11 @@
             <h5 id="sub-header">Digital Humanities Scholars</h5>
 
               <div class="participant_section">
+                <a href="">Abdurrafey Khan</a>, project programmer (Loyola University Chicago)<br>
                 <a href="http://library.wlu.edu/about/library-directory/mackenzie-brooks">Mackenzie Brooks</a> (Washington and Lee University)<br>
-                <a href="http://library.wlu.edu/about/library-directory/jason-mickel">Jason Mickel</a> (Washington and Lee University)<br>
-                <a href="http://library.wlu.edu/about/library-directory/jeff-barry">Jeff Barry</a> (Washington and Lee University)<br>
                 <a href="http://scholarslab.org/people/brandon-walsh/>Brandon Walsh">Brandon Walsh</a> (Scholars' Lab, University of Virginia)<br>
                 <a href="http://megankathleendoherty.com/">Megan Doherty</a> (Washington and Lee University)<br>
-                <a href="">Abdurrafey Khan</a>, project programmer (Loyola University Chicago)
+                <a href="http://library.wlu.edu/about/library-directory/jeff-barry">Jeff Barry</a> (Washington and Lee University)<br>
               </div>
 
             <!-- <h5 id="sub-header">Washington and Lee Student Researchers</h4>
