add p.notice in MS reading environment

--- a/app/views/layouts/_reading_interface.html.erb
+++ b/app/views/layouts/_reading_interface.html.erb
@@ -1,7 +1,8 @@
 <div id="reader-nav">
 
             <div id="reader-nav-title">
-                    <%= @city %>, <%= @repository %> <%= @shelflisting %>
+                    <%= @city %>, <%= @repository %> <%= @shelflisting %><br>
+                    <p class="notice">Please note: this text is not in its final form and is currently being revised.</p>
             </div>
 
             <div id="reader-nav-links">
