--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -1082,6 +1082,11 @@ p.ms-toc {
 
 /* Top bar button navigation */
 
+p.notice {
+    font-size: small;
+    color: red;
+}
+
 #reader-nav {
 	width: 100%;
 	position: static;
