revise p.notice statement

--- a/app/views/layouts/_reading_interface.html.erb
+++ b/app/views/layouts/_reading_interface.html.erb
@@ -2,7 +2,7 @@
 
             <div id="reader-nav-title">
                     <%= @city %>, <%= @repository %> <%= @shelflisting %><br>
-                    <p class="notice">Please note: this text is not in its final form and is currently being revised.</p>
+                    <p class="notice">Please note: this text is not in its final form and the editorial team is currently revising all transcriptions and translations.</p>
             </div>
 
             <div id="reader-nav-links">
