--- a/app/views/layouts/_reading_interface.html.erb
+++ b/app/views/layouts/_reading_interface.html.erb
@@ -2,7 +2,7 @@
 
             <div id="reader-nav-title">
                     <%= @city %>, <%= @repository %> <%= @shelflisting %><br>
-                    <p class="notice">Notice: currently displayed is <%= link_to 'Version 1.0.0', versioning_path() %> of the transcriptions and translation. This version does not represent their final form. <br>The editorial team is currently revising all content.</p>
+                    <p class="notice">Notice: <%= link_to 'Version 1.0.0', versioning_path() %> is currently on display. This does not represent the final form of the transcriptions and translation. The editorial team is engaged in revising all content.</p>
             </div>
 
             <div id="reader-nav-links">
